Changes for donut demo