@@ -64,6 +64,57 @@
                     <compilerArgument>-Werror</compilerArgument>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.20</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <includes>
+                        <include>**/AllTests.java</include>
+                    </includes>
+                    <argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx512m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <!--<argLine>-Denv=${env}</argLine>-->
+                    <systemPropertyVariables>
+                        <project.dir>${basedir}</project.dir>
+                        <!--<cucumber.options>${cucumber.options}</cucumber.options>-->
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>io.magentys</groupId>
+                <artifactId>donut-maven-plugin</artifactId>
+                <version>0.0.5</version>
+                <executions>
+                    <execution>
+                        <id>execution</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirectory>${project.build.directory}/cucumber-reports</sourceDirectory>
+                            <outputDirectory>${project.build.directory}/donut</outputDirectory>
+                            <timestamp>${maven.build.timestamp}</timestamp>
+                            <template>default</template>
+                            <projectName>${project.name}</projectName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
